Giris ekranı değişiklikleri yapıldı

--- a/BayrakBilmece/Giris.resx
+++ b/BayrakBilmece/Giris.resx
@@ -118,6 +118,101 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAIMAAACDCAYAAACunahmAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAABTYSURBVHhe7Z3NjxzHecb1J+yfsLEpkSIpcRTAtwDZXJJL
+        Dosgh8CnNeDAgIEERE4BDCeLIMcAewhyyGkPAUWLHx6JFiUZtrWyY1kIbGVFU7a0FMnh10rk8mNEarX8
+        MMXx82tWD2a6q7uruqt7esh5gQdcTs9UV1c99db7vvVW9TMzmclMZjKTWP70xw/nhYUMzJmvzeRJENOp
+        S8Ky0BXWhL4w8ERP4LerAmUtCh1zm5m0TdQ5c6aTVoR1wdapdQCSQJAFU5WZTELUAR2h6c4vAhrooDBv
+        qjmTuoRGFiAAqtvWGW0CJGWamtkfIcU0KirZ1ujeOHDyy8GLr3+Ri84bd62/LQnsjdlUUlbUeNgBzMel
+        tAAdvv+1W4O9P7w2ePaVC4Nnf9Bb/5P/+f2a0BWWHbAi8P01fv/ckUtRWRDlpbceWO/pAAi9ZB5xJkWi
+        xopJ4GX50/l01nOvXOirA+MOXxCCzN+UY8qj3O7XX/6kt/volYhwJbQIBJ+RIk/UQF4keOHE5wM65OuH
+        Nuj8g3SYKaoR4X7mvt1dh88N9nWv+xIDu2I2fYyKGgS30Gk6QAM8JsCZVXXCoimiFUJ9hFWIgcbwmE6Y
+        Pp5uD4QGEHDHbA00BhrXzPtLQqstdOpHPb92aGMd4kJg2zMlgEZcNkU8XaIHxx8vnBIggUYa08DUqVPV
+        v7P/RH8NozP5XDlg6ng6Ipx6UAzEQm3wmATnmQqmSn2q7kx5uJJVYyEHTZFPpugBiRrmagNGkVw5XLqp
+        GR2qdxwNDR0MY9A8eUErPRTTgu2BI2Bs7Tn2aU8kaJVRiKh+dHa86AXihS/g5QKXAAR7cqYNPQxq0/ag
+        EXAR5bfjvwcZBSoTw7TU9KLfxR1Pnduy7gHhpjsuoQfAPsgMI0fa4OgmHkIw5qtc1HV8Dycto+9Ny5rH
+        dBJCFYcIuSNrz7HNVfP1IKIyGdGj9+iaS5liflO3qg+JoG1Wu6jChUQwCMr0F350J+mlrJtLVuH+ie9P
+        C6aDEKqoKxFA4cj1EXx6yz2sdog+zzVopwDtJoQq6EME0DM/DSJyS21kSEX19FmuQTtFaCchVDFfIoC+
+        +XlpURkYf6h7/rXeQxgaqPrbSyMQ/CKkXGHZum60L4StSmV6DTlYMz8vLSoDAvY6b9zN6+T+v//uq8XB
+        YLBw+OKj3n+ffTQ4sflo8JtbdnAd/OvprwYnL9xmLaQDIUqsSjaF9ngZqkxZtVsp5KppgQzoqCyN4DG3
+        8M9/9jDqzLVrjwZ3/iAaVJTf3bo7ePlMv//dX24N79EyTD4wpUqUsshRu3t/eK3SuoNGKdHAqDzUOf/G
+        BKhTIBea5e9+9dXYM00YTIeTW8fRzYnW2SpWCHVe5blOZBhqg++fujfY3DG9lSM7d+8Otre3x1BFmFb+
+        /tetIUWuK12b6MYYjKUidtIIlW0FhNzEb737RS4Jbt++M7i8udnfOPPJ2qnTH3aFZfDzDz5efeX984Of
+        fbAx0P8HZz45O9j89LOILGUEbcTUZHvehrFimqc50U2ty9BFVrfmecLPldcg1IFzv93a7pq+SMkHWzuD
+        7713ffAXr1203q/z5r1h2Ppv3t5eVHlLAmQZfLSxEZHIV5g+/mm9FVqiudwP3Yw1+1QlpLb7eVk9B05u
+        k6xa2dC5cOlS58udnZ7pg6T0vvN2tAQOMhe/EgGqaCFIWPjOL/pL3ffP9SDFufO9wcOHD02x7nLowqOx
+        554A0NhBFv1yhZsIqVi+MQiXsrJ6uC61XpmxUvdL9+/f75t2T8q64NQIGdHKIb79888H7536aPDh7z8q
+        NXVgYNrKbRD1Txe6idWNlEEYhZazyCCiVDYYUeW3+lk8GHDByZpWfeZeevN+YYBs8e0vBz/6/7OlCUGs
+        Illmw6hvuqDwxM0iGPUfjUgbGbATogIqiIjQ+fTq1UwmSApHguqCVvNaqv6znzwYaoj7Dx6YW7nLhD2N
+        oOH+MVHh1tG059jmMG/ARgap5Mp2wsdnPlkvmL9zR4HqAZFLeT9oiNiG8BU8nQl7GeFzKVWoNbjEsrH5
+        SiQWMlReTFFHLOdMD7FYyaD7EwvxXTNJ4d9+dTUihEM9UjLh6QL7LqwxqQJTowrvIWmts8Utvh4iyqgO
+        mJOK7jtY9WPThO4fZy+N1bkKiEngdvoK2sFWXoMIt5ilwqxaYd+rN1NpZSLHKos6kGL3kcuVF1BEhqVL
+        V66YZs2V/l+9Exm3KU8nFP7xf29G2qFM1HLC8Ydw2kEFpbSCrPHMKKII0RGCxMnV+N3rN26YJs2Xf/nt
+        H8bqGBqxMelIzjFpgatZXTuokKyFqEbW0X1G4uXtB2RZ99g+77ilzRurv75YaqrYuJNPhiyXPCCqawcV
+        kGWBN7Ljp4RajnZj73r5bGWj0YZ//uX1aKooE5m0lQeeP36VkPky+RK26wFRvs/0Y2tcwaD2lCs1eqcE
+        GTD353YdPuu9tE7iCptl0SxZI/Wb79wpbTfYytvb3RqunRRFRQOgfNxBPy5KWql1/VyNPlem4d+78YhF
+        tJRmYOqgk8l9UIfTCWsYu5Bg5HusabCLuhvnSIwCuyEUGV566/6YN9YAGYB/VFI/IlpnK2wUQZai84SG
+        v3ptyzSnm9hcuVgVGwy9IP3dQRskCBFpPV1btdkeATXDWPsdOLnTBBn8NboaxzVxtNb8OzX8OrkGvjIa
+        BpY2sC5jx8I1jv8ZeSaA7TG359hmylWtiwxsM7R8pw74GZL6gasBVl/8W6KGX6HxfdcFYjIQ+Np95HJh
+        OFwdv5TQDpH1/fzxz1KBqzJkyPAmxrLDn/3B+V5RPkgguA9gooaWAvJQ285pNfw8je+7LjCyHuDkAqMF
+        LEbjEquto5/95U/vRmTw9SZy4gxDoqoOHZsmqgHum5c8pogYtXoWanxS1Qauwac4ucSMMmeVGJNBBOBo
+        gMiQZHf46GjFm2AF01dI1I3LSGBslOqeY+SrC+Z2xUJ00VZADmqdKhCRIUpJKzImSVBFK6Dy93aveyV4
+        qOP75tyoIYH09zy5lngW4PvvnOv1Ll40d3OXnJXLMc2l++W58yFRrM1piBLzVuWdUS4iMkT2AxFAVg9H
+        7YidnZ3+8Y2tON0NDAMsqh8rlzQyiA/cwBaA9CDXplBZ8RmQxD2cw+OxFISix7Qq97F8pw4UDxQWnyw/
+        zIV+U3sAKhZ1BjYEpCDbOQb/H4t5qF4QwHVzj/Mcqvv0fY3Zgv0V2AgQID4kxJpoXAOKE45efH3bedkX
+        tbnr8NlobjU/n6ioTjRofMCWtc4ZcNJsIsKi7xRBCr3lfm1Bfr+52Av4w+Y4vlojkK6iOjGySmUxjaDw
+        WUSGrq9L+de/sN6rLciPRiZ87TFwTT47mqC+REtPUb3QBiHcsVwXlGnI171tQUJsEbKfGQPJ8oMIe7tb
+        xNEbWal0FdWr9K6uDDBno2WYapguhyT7r/+77BVowquJf9tiZNtK+0/0rSt95lzGVkwJo6K6+doGpUBs
+        wcdWYGdVy6eHGNlG5Iuvf5EKeORlNE1SVLfGjuFhT6aPB9GijbiFMM2Zlowl1EYymnxEdQqa6JoHdlb5
+        rJrmRBozQVJLXZlZDrB7FBlLqK05FUR1wUaoJYMpC++cPuu8DjEaXPIJ3PHdXYfP5+5TrRF2Z8CyUJP9
+        5QmI6tJI3D4GeyVc90kko4y+o53p+GuHNtYaSH1LYjrJINc2pOeQC1YnT591Mxpt4ebOm/e7LEknPy8A
+        WeUk36yzHhKDbQc1ao20GaAKzNliDObyxAVvJlm3OkEWtMtm25x1B1Y+F+hIy7Us4MpiDxGS5t/oRStC
+        9IYbiFEDKaxksC6QmMsTFzVqUws4kSvJKS5FUrAABRZ4fVKJhb9RYCNFRp76iAWz0FPJVJKhMXvBxWh0
+        IAKIQvae2sGGsXiAylzec/wz2/fKYPrIYIuB1AH2RRQZjY5EiDHPG3Usn/tizHaDECwUWr7ni+kjQxNp
+        5KTBv/9RfvKtJxFA9Ja9DOPcCWaaSUWAeYVjxSkIzMhgQ9H6QwkixJjnLTuWz3NBRzP65ZVYE1HUZ85T
+        EGVlTC0zMiSBK5m3KlmBCADtsOI6ivkenWze3ZmbhcV3bGWMgvKeO3JxNcPumpEhCVzJLK1QkQgR1BFO
+        bmZEAo9XNNFvee5mTAS+60UGG3PN5YlLnWTIW5UMmKm0kmdIEuMpuzqcZ0iOpiT6kKHT5ghknWRgVdKm
+        Fdj4EvA8pigpyNZxxA2kDUrniux79YbVHnnhxOdjLqnlTT0gTQakzWQgw8pSt8rg8C6brUBOQuCDuaJU
+        AHJG0QKodgy6EC9y1YhPtY3Z1DtWbsaAsqfMZ6ib2nZL+cjuo1dqiTPgQdjiCjWcGB+RAQ0sYBMM3+qv
+        azyb+y6nhGigpJb0icuYy0M58MaObcXXPtgz1I1djTQsarjkXsjKIK5g2x31Hx/XkpyS2k6gz8gsi9u8
+        9EYk2iYxkFMHryEZhqZdK9nUjeC1K6ku4eEsO6UrgQO7kucz1Zi7GJFB/5JnykhODrxK+aVqn9V4zULT
+        QarPdN2a32oup4X3TFp+0Jq0Nz3QIoQIpSFwJ5NTxART1irZDYjah6kHG8SiFbZtm6OycyDxby0/aI17
+        icBwDtfIc6dccer0+Fb/okO4akTx7qaKogFk69tsO0UNvZAx6lphRI4KI6AKIWy7qWuyFVxQ+xaEjJTG
+        bHtQDTyfcXpIKzOkIUTZtX1WJ5Mu5QTT252ijVWk1CBns4zlR6BVG2hiESEOkgGUtSqI9uD0NqJ75Bjy
+        XQ71+s/3zo9lPU9wiqh907IMyqzNUfkkVEPl7QLGCq6dxb6CRkNLyObp0dnguVcuknaGMZXyo/VZ563f
+        fNgb3VofYv3BF7h6qmvtQT1pBdsek2JXVg3lsjkFY6R1pPARjMfREHTT9gKajLMqTXVqlQx7oVgjMWqy
+        VG4Cw9y8aRMRITpfcjThtUmXUmqboFDld3C4SsbSuRsRnz9+1TW4M5WEEBEWIMOoNGU8Nk2EjPgCcOs3
+        z5y9VoSrfcRGBstzBYfZyd4YEZDOm/dsfeke11CFFz3y8xs5zymkiAgHIQPeBDj/2Q3bcwUFoX61a+Na
+        lNVLS338PEOPqQK0LiiVJ0YzRG++hRjf6F6pdf8mBpy5daOie2dNEX6hb8+povTyaxtEI/ZgqPWODExk
+        sOi+tj707yumCkevIkblhZZJCep795HLQVdEE2g8YKd7Zh0EX86d9UzvbsVSd1lBO9R4kHfjRjb3TNQB
+        lLfv1EDLHupz6gzJpNSVWiekbAZ9xsitLfqoslMDmZfBm8v+gvqUFTxWYAFac7BHGdn/2i3rEn4A2MgQ
+        z+fB1yZUZtZbeKpN5Z67iJl3p8KzGAwG88KisGyw8LfvflWXZkgZbSMaN7inoTItWuF+dSNf2qHMLmJI
+        AfNbRwxDAN6mbxXS3moITY9pTP1/dMNSUDJwr5Gyh1AfhpmSKp4xAEsnvrB16vSH83fv3VszfV4oZQ7q
+        ssEEfYbPrr9ZTh6Na4QmQ0orBI1zlNQOSdAoE7EpRITOzZu33A5nGpGqhGAAkeJvqhETIenCBvM0KCtR
+        doRgWiEWtEOgwAyjorH4PBrhXK/nTQSk6kYaEoxNNSLRZzabJEh8hnKEJNHImQgfEMSzCPjKnMbcUJFh
+        1fXENpuUeYc1GiHe7BqLPk+dSXXg5HYwT0LlpZKSqIe0Qj3BQOIOnlHJPDSiHUSGvs+Zz0nxPQzcRgRk
+        36s3UklDoTpKZVnXINRX9Qa7Ar1WuBHNICKUeknqqPiQgWnURgREHZ+cz4NoBZVD8CqlsVUX0v7qNdp1
+        A9/j7GwIph7zJCZDlWnC1YhkyT8vjc2yVzSIUadyrNODpvRm3HoRYsUj38GGxrwKpgnf90TE4mpAFhEB
+        UZstxWn9oVw9lWXNV93/2q3mVpFRP0wXMNBWGQc06U1Er0G8ffuO6WJ3cUmSpQ1cE1vVbuy+5jjAys+v
+        e1tP2mlkekgKD1Ry2bfRBS0zVayze8rlxNdY4ndjFqF2I80iuq8tXhERs4nUe6uIEEPV54HmVJiRmBBo
+        CNLcCg787P3Du9ecSJ58y30Tovtmnqw/GuCaiKgxVj3dzUlFISEEU0YfLcEZTnEOJNjaut6/dOUK1zmr
+        udBIZhQ23fi6byYR9navNz7IrMKuaBeDkpFkfjJRUYeTA0lSbJQDyf/NpaFkrcfwGVv2ss5mrEt070wi
+        aDCOvaV3okJFeG2wrfFGsefYp63cr2kTPdM8r0NGQ3D2UrRt7/GrkQvPZgwtartMIph9GO1KOaSBdh0+
+        3y8gRKONGEL0XJMxyIyozTKJIM+h8X0YzuJACAyziTbuNInayuo1AIggb67dg8tRQ0zNdDEpURuRpGIl
+        gkuQqzXiSAjCqO0weloktImQOsovxoGT23217VRtWhoSgsUb20MZkJUzdXZEXUJbCFb7ADS9aTeoUHFH
+        t3OywZIWCG2QaJMx7Hv15vQSIRY9wBzH5zgcxsWIeOq0hJ6ZNYZU3mIMptrnj19tTxwhhOhhVhzfq9TK
+        o4JCi56RzKe8I5OG+RFPFBFi0UMtOdgRACt6OqxlT9FzQYLCTc1s9aty0vxUiAgxjx3huMCF+nwiSKHn
+        cCIB08Keo5tMC0/PlKmHXSbE66AlwNSSQvUmPzF3OogRaYNDZ1aeyGmhSGA/xqVHGh2kmPiGnCJR/dAC
+        1DPTMBwFA8Jog1l0Vo2wxKKQg8cxCkZba4IvqgsEIA0tM06QBFOCOefpqXetxwTVSKNwarxnfgTGJnMx
+        4dtGNYbuh1uI9+NMABCRQNqQZXKe2xQ3k6QYUqxCCk9NEYOOoYMgRzAjjLIE5n/KLrVbO0GCdi07t1kM
+        KZaZPvA8aEhbAzsCgtCBdCRzOaBjGdmjgEDx9bjTvUa9DZFNcGyzPyNBAFEDLgnru49eiSxuW4O3DZDX
+        ZESRrcxLQWbTQUhRg/KyrxV5IL02EiMmAFnj1JP6mqrPpE4xxGAfwjqvEGAq8TQ8K4POh5BRWtzjlLgZ
+        ASYt6gDsi0XTGdE7JeigmCCOga1cUA4djwEI+dhEZO7HFDazA9os6iA0BwRBe2C4DV8+Mgo6NwZTz9j1
+        x6OdY375PeVQ3mzkz2QmM3lq5Jln/gjul4cppztT7gAAAABJRU5ErkJggg==
+</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIAAaagAAZgAAAICAAAABACAAKAgBAIBqAABAQAAAAQAgAChCAACocgEAMDAAAAEA
