Düzenle menüsü butonları değişti

--- a/BayrakBilmece/Duzenle.resx
+++ b/BayrakBilmece/Duzenle.resx
@@ -150,7 +150,7 @@
         AAAASUVORK5CYII=
 </value>
   </data>
-  <data name="button3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAJcAAABbCAYAAAB+tRe2AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
         YQUAAAAJcEhZcwAACxIAAAsSAdLdfvwAAAK9SURBVHhe7dxfatRQFMfxWcIswSV0CV2KS3EnbkTaIkWq
